--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@fortawesome/react-fontawesome": "^0.2.2",
+    "@tailwindcss/vite": "^4.0.9",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.1.5",
+    "tailwindcss": "^4.0.9",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
