--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "@tailwindcss/postcss": "^4.0.9",
     "@tailwindcss/typography": "^0.5.16",
     "@tailwindcss/vite": "^4.0.9",
+    "firebase": "^11.4.0",
     "framer-motion": "^12.4.10",
     "postcss-import": "^16.1.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^5.5.0",
-    "react-router-dom": "^7.1.5",
+    "react-router-dom": "^7.3.0",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
